welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:18: error: Boolean does not take parameters
		(getDirection()==Direction.OUEST){
                                                 ^